# luql

./: .gitignore  cabal.project.freeze  docker-compose.yml  hie.yaml  justfile  luql.cabal
.github/workflows/: haskell.yml
lib/: LuQL.hs
lib/LuQL/: Compiler.hs  Parser.hs  Render.hs  Runner.hs  SqlGeneration.hs  Types.hs
test/: LangSpec.hs  RunTests.hs  TypeCheckerSpec.hs
test/.golden/Lang/a return keeps a model column/: 0_Raw.expected.luql  0_Raw.golden  1_Parser.expected.json  1_Parser.golden  2_Compiler.expected.json  3_SqlGeneration.expected.json  3_SqlGeneration.golden  4_Render.expected.sql  5_Run.expected.json  5_Run.golden
test/.golden/Lang/a return keeps a simple column/: 0_Raw.expected.luql  0_Raw.golden  1_Parser.expected.json  1_Parser.golden  2_Compiler.expected.json  2_Compiler.golden  3_SqlGeneration.expected.json  3_SqlGeneration.golden  4_Render.golden  5_Run.expected.json  5_Run.golden
test/.golden/Lang/a return keeps only that column/: 1_Parser.golden  2_Compiler.golden  4_Render.golden
test/.golden/Lang/a single join with a rename/: 0_Raw.expected.luql  1_Parser.expected.json  1_Parser.golden  2_Compiler.expected.json  2_Compiler.golden  3_SqlGeneration.expected.json  3_SqlGeneration.golden  4_Render.expected.sql  5_Run.expected.json  5_Run.golden
test/.golden/Lang/a single let with a from afterwards/: 0_Raw.expected.luql  1_Parser.expected.json  1_Parser.golden  2_Compiler.expected.json  2_Compiler.golden  3_SqlGeneration.expected.json  3_SqlGeneration.golden  4_Render.golden  5_Run.expected.json  5_Run.golden
test/.golden/Lang/a single let with a number/: 1_Parser.expected.json  1_Parser.golden  2_Compiler.expected.json  2_Compiler.golden  3_SqlGeneration.expected.json  3_SqlGeneration.golden  4_Render.expected.sql  5_Run.expected.json  5_Run.golden
test/.golden/Lang/from model/: 0_Parser.golden  0_Raw.golden  1_Compiler.golden  1_Parser.expected.json  1_Parser.golden  2_Compiler.expected.json  2_Compiler.golden  2_SqlGeneration.golden  3_SqlGeneration.expected.json  4_Render.golden  5_Run.expected.json
test/.golden/Lang/from model assigning a different name/: 0_Parser.golden  0_Raw.expected.luql  1_Compiler.golden  1_Parser.expected.json  1_Parser.golden  2_Compiler.expected.json  2_Compiler.golden  2_SqlGeneration.golden  3_SqlGeneration.expected.json  4_Run.golden  5_Run.expected.json
test/.golden/Lang/from model with implicit wheres/: 0_Raw.golden  1_Parser.expected.json  1_Parser.golden  2_Compiler.expected.json  2_Compiler.golden  3_SqlGeneration.expected.json  3_SqlGeneration.golden  4_Render.golden  5_Run.expected.json  5_Run.golden
test/.golden/Lang/group by with a declared column/: 0_Raw.golden  1_Parser.expected.json  1_Parser.golden  2_Compiler.expected.json  2_Compiler.golden  3_SqlGeneration.expected.json  3_SqlGeneration.golden  4_Render.expected.sql  4_Render.golden  5_Run.expected.json  5_Run.golden
test/.golden/Lang/group by with a raw query (count)/: 0_Parser.golden  0_Raw.golden  1_Parser.expected.json  1_Parser.golden  2_Compiler.expected.json  2_Compiler.golden  3_SqlGeneration.expected.json  3_SqlGeneration.golden  4_Render.expected.sql  4_Render.golden  5_Run.expected.json  5_Run.golden
test/.golden/Lang/group by with an aggregate/: 0_Raw.expected.luql  1_Parser.expected.json  1_Parser.golden  2_Compiler.expected.json  5_Run.golden  (+6 more)
test/Tests/: Utils.hs
(+60 files in other folders)
